# cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: DockerHubFile  Dockerfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py  tox.ini  venv.sh
{{cookiecutter.project_slug}}/.github/workflows/: dev-ci-cd.yml  prod-ci-cd.yml  pull-request-workflow.yml  reusable-cd.yml  reusable-ci.yml
{{cookiecutter.project_slug}}/src/: app.yaml
{{cookiecutter.project_slug}}/src/api/: gunicorn_config.py  routes.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_routes.py
