[metadata]
name = backend
version = 0.1.0
author = wineservices
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
url = https://gitlab.com/wine-services/{{ cookiecutter.github_repo_name }}
python-requires =={{cookiecutter.python_version}}
# see https://pypi.org/pypi?:action=list_classifiers
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Education
keywords =

[options]
package_dir = src/
packages =

[tool:pytest]
testpaths = src tests
addopts = -v --doctest-modules --cov src/ --cov-report html --cov-report term --cov-report xml --junit-xml=reports/junit.xml


[mypy]
python_version = {{cookiecutter.python_version}}
no_implicit_optional = True
ignore_missing_imports = True
